--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Satya Chintu
-logo: !image[/assets/PHeadshot.png]
+logo: !image[/PHeadshot.png]
 descriptions: Be Realistic & Aim for the impossible !
 #show_downloads: true
 theme: jekyll-theme-minimal
