--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Satya Chintu
-logo: !image[/.github/PHeadShot.png]
+logo: /PHeadShot.png
 descriptions: Be Realistic & Aim for the impossible !
 #show_downloads: true
 theme: jekyll-theme-minimal
+
